# waveChopper

./: CMakeLists.txt  README.md  main.cpp
waveChopper/: PngWriter.cpp  WaveFile.cpp
waveChopper/include/waveChopper/: Formatter.h  PngWriter.h  WavHeader.h  WaveFile.h
